fix spacing and font

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a.current:link, a.current:visited {
 /*** typography ***/
 p, ul {
   font-family: 'Merriweather Sans';
-  font-size: 1.5rem;
+  size: 1rem;
   line-height: 2.3rem;
 }
 
@@ -176,6 +176,16 @@ img {
   width: 23rem;
 }
 
+.solobutton:hover {
+  background-color: #3AA695;
+  color: white;
+}
+
+.projectbutton:hover {
+  background-color: #3AA695;
+  color: white;
+}
+
 /* project STACKS CASE STUDY*/
 .box {
   clear: right;
@@ -233,6 +243,22 @@ img {
 .prototypebutton {
   margin: 5rem auto 2rem auto;
   text-align: center;
+}
+
+
+.prototypebutton:hover {
+  background-color: #3AA695;
+  color: white;
+}
+
+.buttona:hover {
+  background-color: #3AA695;
+  color: white;
+}
+
+.button:hover {
+  background-color: #3AA695;
+  color: white;
 }
 
 .intro {
@@ -350,6 +376,7 @@ img {
   .section {
     margin: 3rem 10rem 3rem 10rem;
   }
+
 }
 
 @media screen and (min-width:991px) {
@@ -460,7 +487,7 @@ img {
 
 @media screen and (min-width: 1100px) {
   p, ul {
-    font-size: 2rem;
+    font-size: 1.8rem;
     line-height: 3rem;
   }
 
@@ -520,6 +547,8 @@ img {
     text-decoration: none;
     width: 30rem;
   }
+
+
 
   /* about */
   .one {
